--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!-- End of Boostrap5 -->
 
+        <link rel="stylesheet" href="./scss/main.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -57,5 +58,7 @@
           </div>
         </div>
       </nav>
+
+      <h1 class="fade-in">test</h1>
   </body>
 </html>
