--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -30,6 +31,23 @@
               <li class="nav-item">
                 <a class="nav-link" href="./about">About</a>
               </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="/social" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Social Links
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item text-center" href="./projects">Social Links</a>
+                  </li>
+
+
+                  <li><hr class="dropdown-divider"></li>
+                  <li><div class="text-center"><a href="https://discord.gg/eV3JRT2N4W"><b>Discord</b></a></div></li>
+
+                </ul>
+              </li>
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="/projects" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Download
@@ -38,16 +56,26 @@
                   <li>
                     <a class="dropdown-item text-center" href="./projects">Downloads</a>
                   </li>
+
+
                   <li><hr class="dropdown-divider"></li>
-                  <br>
-  
-                  <li><div class="text-center">Windows</div></li>
+                  <li><div class="text-center"><b>Windows</b></div></li>
                   <li><hr class="dropdown-divider"></li>
                   <li>
-                    <a class="dropdown-item" href="#">x64 Installer</a>
+                    <a class="dropdown-item" href="#">x64 Installer (64-bit)</a>
+                    <a class="dropdown-item" href="#">x86 Installer (32-bit)</a>
                   </li>
-                  <br>
-                  <li><div class="text-center">Mac</div></li>
+
+
+                  <li><hr class="dropdown-divider"></li>
+                  <li><div class="text-center"><b>Linux</b></div></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li>
+                      <a class="dropdown-item" href="#">None</a>
+
+
+                  <li><hr class="dropdown-divider"></li>
+                  <li><div class="text-center"><b>Mac</b></div></li>
                   <li><hr class="dropdown-divider"></li>
                   <li>
                       <a class="dropdown-item" href="#">None</a>
@@ -58,7 +86,21 @@
           </div>
         </div>
       </nav>
+      
+      <!--
+        Main site content below
+      -->
 
-      <h1 class="fade-in">test</h1>
+      <h1 class="text-center">Hello, world! Welcome to the DeuTerium homepage!</h1>
+
+      <br/><br/>
+      <p>Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
+        Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br/>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
+        Excepteur sint occaecat cupidatat non proident,
+        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </body>
 </html>
