--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Deuterium</title>
+
+    <meta name="description" content="Give your terminal wings with DeuTerium using 2 letter commands">
+    <meta name="author" content="DeuTerium">
+
+    <title>DeuTerium</title>
 
         <!-- Bootstrap5 -->
 
@@ -19,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index">Deuterium</a>
+          <a class="navbar-brand" href="./index">DeuTerium</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
