--- a/404.html
+++ b/404.html
@@ -147,13 +147,21 @@
     <!--
         Main site content below
       -->
-    <br />
+
+    <h1 class="text-center not-found-text">404</h1>
+    <div class="text-center not-found-info">Looks like this file wasn't found on the server. 💀</div>
+    <br>
+    <br>
 
     <div class="d-flex justify-content-center">
-      <div class="console">
-        <h3 id="first-command-text">
-          C:\getdeuterium-win> dt dd {WEBSITE_PATH}
-        </h3>
+      <div class="console" id="console">
+        <ul id="console-messages">
+          <li>
+            <h3 id="first-command-text">
+              C:\getdeuterium-win> dt dd {WEBSITE_PATH}
+            </h3>
+          </li>
+        </ul>
       </div>
     </div>
 
