--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <!-- End of Boostrap5 -->
 
     <link rel="stylesheet" href="./css/main.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3378994353242351"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
