Add Blog | Add content to About Page | Organize Navbar in HTML file | Edit 404 Page | Add jQuery

--- a/about.html
+++ b/about.html
@@ -19,25 +19,25 @@
         <!-- Open Graph Protocol -->
 
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Deuterium" />
+        <meta property="og:title" content="Deuterium Blog" />
         <meta
             property="og:description"
-            content="Give your terminal wings with Deuterium using 2-4 letter commands"
+            content="Give your terminal wings with Deuterium : About"
         />
         <meta
             property="og:image"
             content="https://raw.githubusercontent.com/AregPrograms/Deuterium/main/gfx/dark.png"
         />
-        <meta property="og:url" content="https://www.getdeuterium.win" />
+        <meta property="og:url" content="https://www.getdeuterium.win/about" />
 
         <!-- End of Open Graph Protocol -->
 
         <!-- Twitter Meta Tags -->
 
-        <meta name="twitter:title" content="Deuterium" />
+        <meta name="twitter:title" content="Deuterium Blog" />
         <meta
             name="twitter:description"
-            content="Give your terminal wings with Deuterium using 2-4 letter commands"
+            content="Give your terminal wings with Deuterium : About"
         />
         <meta
             name="twitter:image"
@@ -46,7 +46,12 @@
 
         <!-- End of Twitter Meta Tags -->
 
-        <title>Deuterium</title>
+        <!-- Tab Design -->
+
+        <title>About Deuterium</title>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+
+        <!-- End of Tab Design -->
 
         <!-- Bootstrap5 -->
 
@@ -63,10 +68,15 @@
         ></script>
 
         <!-- End of Boostrap5 -->
-        <link rel="stylesheet" href="./css/main.css" />
-        <link rel="stylesheet" href="./css/404.css" />
 
-        <script src="../js/jquery.js"></script>
+        <link rel="stylesheet" href="./css/main.css" />
+        <link rel="stylesheet" href="./css/post.css" />
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3378994353242351"
+            crossorigin="anonymous"
+        ></script>
+        <script src="./js/jquery.js"></script>
         <script>
             $(function () {
                 $("#navbar-placeholder").load("navbar.html");
@@ -79,26 +89,12 @@
         <!--
         Main site content below
       -->
-
-        <h1 class="text-center not-found-text">404</h1>
-        <div class="text-center not-found-info">
-            Looks like this file wasn't found on the server. 💀
-        </div>
-        <br />
         <br />
 
-        <div class="d-flex justify-content-center">
-            <div class="console" id="console">
-                <ul id="console-messages">
-                    <li>
-                        <h3 id="first-command-text">
-                            C:\getdeuterium-win> dt dd {WEBSITE_PATH}
-                        </h3>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <h1 class="main-title">About Us</h1>
 
-        <script src="./js/404.js"></script>
+        <hr class="mobile-divider" />
+
+        <span class="title-description">Deuterium</span>
     </body>
 </html>
