--- a/navbar.html
+++ b/navbar.html
@@ -22,6 +22,7 @@
 
 
               <li><hr class="dropdown-divider"></li>
+              <li><div class="text-center "><a class="dropdown-item" href="https://github.com/AregPrograms/Deuterium" target="_blank"><b>GitHub</b></a></div></li>
               <li><div class="text-center "><a class="dropdown-item" href="https://discord.gg/eV3JRT2N4W" target="_blank"><b>Discord</b></a></div></li>
 
             </ul>
