--- a/404.html
+++ b/404.html
@@ -63,13 +63,13 @@
         ></script>
 
         <!-- End of Boostrap5 -->
-        <link rel="stylesheet" href="./css/main.css" />
-        <link rel="stylesheet" href="./css/404.css" />
+        <link rel="stylesheet" href="https://getdeuterium.win/css/main.css" />
+        <link rel="stylesheet" href="https://getdeuterium.win/css/404.css" />
 
         <script src="../js/jquery.js"></script>
         <script>
             $(function () {
-                $("#navbar-placeholder").load("navbar.html");
+                $("#navbar-placeholder").load("https://getdeuterium.win/navbar.html");
             });
         </script>
     </head>
@@ -99,6 +99,6 @@
             </div>
         </div>
 
-        <script src="./js/404.js"></script>
+        <script src="https://getdeuterium.win/js/404.js"></script>
     </body>
 </html>
