--- a/about.html
+++ b/about.html
@@ -69,6 +69,13 @@
 
         <!-- End of Boostrap5 -->
 
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,900&display=swap"
+            rel="stylesheet"
+        />
+
         <link rel="stylesheet" href="./css/main.css" />
         <link rel="stylesheet" href="./css/post.css" />
         <script
