Make 404 ul scrollable

--- a/404.html
+++ b/404.html
@@ -63,13 +63,23 @@
         ></script>
 
         <!-- End of Boostrap5 -->
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+
         <link rel="stylesheet" href="https://getdeuterium.win/css/main.css" />
         <link rel="stylesheet" href="https://getdeuterium.win/css/404.css" />
 
         <script src="../js/jquery.js"></script>
         <script>
             $(function () {
-                $("#navbar-placeholder").load("https://getdeuterium.win/navbar.html");
+                $("#navbar-placeholder").load(
+                    "https://getdeuterium.win/navbar.html"
+                );
             });
         </script>
     </head>
