--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
 
         <!-- End of Boostrap5 -->
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
 
         <link rel="stylesheet" href="./css/main.css" />
         <script
@@ -100,7 +103,7 @@
             src="https://raw.githubusercontent.com/AregPrograms/Deuterium/main/gfx/dark.png"
         />
 
-        <h1 class="main-title typewriter">Deuterium</h1>
+        <h1 class="main-title typewriter"><b>Deuterium</b></h1>
 
         <hr class="mobile-divider" />
 
