--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
             rel="stylesheet"
         />
 
@@ -98,7 +98,7 @@
       -->
         <br />
 
-        <h1 class="main-title">About Us</h1>
+        <h1 class="main-title"><b>About Us</b></h1>
 
         <hr class="mobile-divider" />
 
