--- a/404.html
+++ b/404.html
@@ -82,6 +82,25 @@
                 );
             });
         </script>
+        <style>
+            ::-webkit-scrollbar {
+                width: 15px;
+            }
+
+            ::-webkit-scrollbar-track {
+                box-shadow: inset 0 0 5px rgb(10, 10, 10);
+                border-radius: 5px;
+            }
+
+            ::-webkit-scrollbar-thumb {
+                background: rgb(15,15,15);
+                border-radius: 5px;
+            }
+
+            ::-webkit-scrollbar-thumb:hover {
+                background: rgb(30, 30, 30);
+            }
+        </style>
     </head>
     <body>
         <div id="navbar-placeholder"></div>
@@ -98,7 +117,7 @@
         <br />
 
         <div class="d-flex justify-content-center">
-            <div class="console" id="console" style="word-wrap: break-word;">
+            <div class="console" id="console" style="word-wrap: break-word">
                 <ul id="console-messages">
                     <li>
                         <h3 id="first-command-text">
