--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@
         <link rel="stylesheet" href="https://getdeuterium.win/css/main.css" />
         <link rel="stylesheet" href="https://getdeuterium.win/css/404.css" />
 
-        <script src="../js/jquery.js"></script>
+        <script src="./js/jquery.js"></script>
         <script>
             $(function () {
                 $("#navbar-placeholder").load(
