Add top bar to 404 terminal

--- a/404.html
+++ b/404.html
@@ -93,7 +93,7 @@
             }
 
             ::-webkit-scrollbar-thumb {
-                background: rgb(15,15,15);
+                background: rgb(15, 15, 15);
                 border-radius: 5px;
             }
 
@@ -116,15 +116,18 @@
         <br />
         <br />
 
-        <div class="d-flex justify-content-center">
-            <div class="console" id="console" style="word-wrap: break-word">
-                <ul id="console-messages">
-                    <li>
-                        <h3 id="first-command-text">
-                            C:\getdeuterium-win> dt dd {WEBSITE_PATH}
-                        </h3>
-                    </li>
-                </ul>
+        <div>
+            <div class="d-flex justify-content-center terminal-top">Terminal</div>
+            <div class="d-flex justify-content-center">
+                <div class="console" id="console" style="word-wrap: break-word">
+                    <ul id="console-messages">
+                        <li>
+                            <h3 id="first-command-text">
+                                C:\getdeuterium-win> dt dd {WEBSITE_PATH}
+                            </h3>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
