windows command prompt

--- a/404.html
+++ b/404.html
@@ -123,7 +123,10 @@
                     <ul id="console-messages">
                         <li>
                             <h3 id="first-command-text">
-                                C:\getdeuterium-win> dt dd {WEBSITE_PATH}
+                                DeuTerium Site [Version on.e.billi.on!!]<br/>
+                                (:]) DeuTerium non-corperation.<br/><br/>
+                                <br/>
+                                C:\getdeuterium-win> dt dd {WEBSITE_PATH}<br/>
                             </h3>
                         </li>
                     </ul>
