starting achievement easter egg

--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
 
         <!-- End of Twitter Meta Tags -->
 
-        <title>Deuterium</title>
+        <title>Deuterium | 404.html</title>
 
         <!-- Bootstrap5 -->
 
