--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                 $("#navbar-placeholder").load("navbar.html");
             });
         </script>
+
+        <script src="./achievement/AchAPI.js"></script>
     </head>
     <body>
         <div id="navbar-placeholder"></div>
