i want to git pull, here are some changes

--- a/404.html
+++ b/404.html
@@ -117,7 +117,7 @@
         <br />
 
         <div>
-            <div class="d-flex justify-content-center terminal-top">Terminal</div>
+            <div class="d-flex justify-content-center terminal-top"><img src="https://iconarchive.com/download/i91923/icons8/windows-8/User-Interface-Command-Line.ico" width="64">Terminal</div>
             <div class="d-flex justify-content-center">
                 <div class="console" id="console" style="word-wrap: break-word">
                     <ul id="console-messages">
