the easter egg 😳 now has css

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             });
         </script>
 
-        <script src="./achievement/AchAPI.js"></script>
+        <script src="https://www.getdeuterium.win/achievement/AchAPI.js"></script>
     </head>
     <body>
         <div id="navbar-placeholder"></div>
