--- a/404.html
+++ b/404.html
@@ -100,6 +100,15 @@
             ::-webkit-scrollbar-thumb:hover {
                 background: rgb(30, 30, 30);
             }
+
+            body {
+                overflow-x: hidden;
+                background: linear-gradient(#171717, #222);
+                color: white;
+
+                font-family: 'Poppins' system-ui, -apple-system, BlinkMacSystemFont,
+                    "Segoe UI", Roboto;
+            }
         </style>
     </head>
     <body>
@@ -117,16 +126,18 @@
         <br />
 
         <div>
-            <div class="d-flex justify-content-center terminal-top">Terminal</div>
+            <div class="d-flex justify-content-center terminal-top">
+                Terminal
+            </div>
             <div class="d-flex justify-content-center">
                 <div class="console" id="console" style="word-wrap: break-word">
                     <ul id="console-messages">
                         <li>
                             <h3 id="first-command-text">
-                                DeuTerium Site [Version on.e.billi.on!!]<br/>
-                                (:]) DeuTerium non-corperation.<br/><br/>
-                                <br/>
-                                C:\getdeuterium-win> dt dd {WEBSITE_PATH}<br/>
+                                DeuTerium Site [Version on.e.billi.on!!]<br />
+                                (:]) DeuTerium non-corperation.<br /><br />
+                                <br />
+                                C:\getdeuterium-win> dt dd {WEBSITE_PATH}<br />
                             </h3>
                         </li>
                     </ul>
