--- a/404.html
+++ b/404.html
@@ -101,10 +101,15 @@
                 background: rgb(30, 30, 30);
             }
 
+            html {
+                height: 100%;
+            }
+
             body {
                 overflow-x: hidden;
                 background: linear-gradient(#171717, #222);
                 color: white;
+                height: 100%;
 
                 font-family: 'Poppins' system-ui, -apple-system, BlinkMacSystemFont,
                     "Segoe UI", Roboto;
