ig now im gonna start remaking this website

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;700&display=swap"
             rel="stylesheet"
         />
 
@@ -100,21 +100,13 @@
       -->
         <br />
 
-        <img
-            class="side-img"
-            src="https://raw.githubusercontent.com/AregPrograms/Deuterium/main/gfx/dark.png"
-        />
+        <div class="title-container">
+            <h1 class="main-title typewriter"><b>Deuterium</b></h1>
 
-        <h1 class="main-title typewriter"><b>Deuterium</b></h1>
-
-        <hr class="mobile-divider" />
-
-        <span class="title-description">Give your terminal wings 🪁</span>
-
+            <div class="title-description">
+                <span class="charge"><i>Supercharge</i></span> your terminal.
+            </div>
+        </div>
         <br />
-
-        <a href="./about" class="learn-more-btn-container"
-            ><button class="learn-more-btn">Learn More</button></a
-        >
     </body>
 </html>
