--- a/navbar.html
+++ b/navbar.html
@@ -1,68 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="https://getdeuterium.win/">Deuterium</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="https://getdeuterium.win/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://getdeuterium.win/about">About</a>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="https://getdeuterium.win/social" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Social Links
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-              <li><div class="text-center">Social</div></li>
-
-
-              <li><hr class="dropdown-divider"></li>
-              <li><div class="text-center "><a class="dropdown-item" href="https://github.com/AregPrograms/Deuterium" target="_blank"><b>GitHub</b></a></div></li>
-              <li><div class="text-center "><a class="dropdown-item" href="https://discord.gg/eV3JRT2N4W" target="_blank"><b>Discord</b></a></div></li>
-
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="https://getdeuterium.win/about" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Download
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item text-center" href="https://getdeuterium.win/downloads">Downloads</a>
-              </li>
-
-
-              <li><hr class="dropdown-divider"></li>
-              <li><div class="text-center"><b>Windows</b></div></li>
-              <li><hr class="dropdown-divider"></li>
-              <li>
-                <a class="dropdown-item" href="#">x64 Installer (64-bit)</a>
-                <a class="dropdown-item" href="#">x86 Installer (32-bit)</a>
-              </li>
-
-
-              <li><hr class="dropdown-divider"></li>
-              <li><div class="text-center"><b>Linux</b></div></li>
-              <li><hr class="dropdown-divider"></li>
-              <li>
-                  <a class="dropdown-item" href="#">None</a>
-
-
-              <li><hr class="dropdown-divider"></li>
-              <li><div class="text-center"><b>Mac</b></div></li>
-              <li><hr class="dropdown-divider"></li>
-              <li>
-                  <a class="dropdown-item" href="#">None</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<link rel="stylesheet" href="./css/main.css">
+<script src="https://kit.fontawesome.com/fa7fdc7b9f.js" crossorigin="anonymous"></script>
+<nav>
+  <h3><a href="https://getdeuterium.win/" class="nav-title-link">Deuterium</a></h3>
+  <div class="vertical-line"></div>
+  <a href="https://getdeuterium.win/about">
+    <i class="fa-solid fa-star-of-life"></i>
+    About</a>
+  <div class="vertical-line-small"></div>
+  <a href="https://getdeuterium.win/about">
+    <i class="fa-solid fa-user"></i>
+    Social
+  </a>
+  <div class="vertical-line-small"></div>
+  <a href="https://getdeuterium.win/download">
+    <i class="fa-solid fa-download"></i>
+    Download
+  </a>
+  <div class="vertical-line-small"></div>
+  <a href="https://getdeuterium.win/docs">
+    <i class="fa-solid fa-file"></i>
+    Documentation
+  </a>
+  <div class="vertical-line-small"></div>
+  <a href="https://getdeuterium.win/blog">
+    <i class="fa-solid fa-message"></i>
+    Blog
+  </a>
+</nav>
