--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
         <!--
         Main site content below
       -->
-        <br />
-        <br />
+        <div class="main-container">
+            <h1 class="title">
+                <b>Deuterium</b>
+            </h1>
+            <h3 class="title-description">
+                <span class="charge">SUPERCHARGE</span>
+                your terminal
+            </h3>
+        </div>
     </body>
 </html>
