--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
         <link rel="stylesheet" href="./css/main.css" />
+        <link rel="stylesheet" href="./css/cards.css" />
         <script
             async
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3378994353242351"
@@ -102,6 +103,31 @@
                 <span class="charge">SUPERCHARGE</span>
                 your terminal
             </h3>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            
+            <div class="cards" id="cards">
+                <div class="card card-left">
+                    <h1><b>Why Deuterium?</b></h1>
+                    <hr>
+                    <h3>Deuterium is easy to use,<br> install, and has many features</h3>
+                </div>
+                <div class="card" main-card="true">
+                    <h1><b>What is Deuterium?</b></h1>
+                    <hr>
+                    <h3>Deuterium is meant to speed<br> up your workflow with the terminal.</h3>
+                </div>
+                <div class="card card-right">
+                    <h1><b>Simplicity</b></h1>
+                    <hr>
+                    <h3>Deuterium makes long commands into short 2-4 letter commands</h3>
+                </div>
+            </div>
         </div>
+        
+        <script src="./js/cards.js"></script>
     </body>
 </html>
