replace 'asdasdasd' lol | change main content offset

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </b>
             </h1>
             <p class="incentive-desc">
-                asdasd
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis eveniet ipsum natus vero esse inventore ea et, nam voluptate delectus.
             </p>
         </div>
         
