--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       -->
         <div class="main-container">
             <h1 class="title">
-                <b>Deuterium</b>
+                <b>Deuterium <img src="dt.svg" alt="Logo" width="75"></b>
             </h1>
             <h3 class="title-description">
                 <span class="charge">SUPERCHARGE</span>
