--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <script src="https://kit.fontawesome.com/fa7fdc7b9f.js" crossorigin="anonymous"></script>
 <nav>
-  <h3><a href="https://getdeuterium.win/" class="nav-title-link">Deuterium</a></h3>
+  <h3><a href="https://getdeuterium.win/" class="nav-title-link">Deuterium <img src="dt.svg" alt="Logo" width="25" style="margin-left: 5px;"></a></h3>
   <div class="vertical-line"></div>
   <a href="https://getdeuterium.win/about">
     <i class="fa-solid fa-star-of-life"></i>
