--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!--
         Main site content below
       -->
-        <div class="website-container">
+        <div class="main-container">
             <div class="section section-1">
                 <div class="main-text">
                     <div class="side side-left">
