--- a/navbar.html
+++ b/navbar.html
@@ -1,27 +1,27 @@
 <script src="https://kit.fontawesome.com/fa7fdc7b9f.js" crossorigin="anonymous"></script>
 <nav>
-  <h3><a href="https://getdeuterium.win/" class="nav-title-link">Deuterium</a></h3>
+  <h3><a href="/" class="nav-title-link">Deuterium</a></h3>
   <div class="vertical-line"></div>
-  <a href="https://getdeuterium.win/about">
+  <a href="/about">
     <i class="fa-solid fa-star-of-life"></i>
     About</a>
   <div class="vertical-line-small"></div>
-  <a href="https://getdeuterium.win/about">
+  <a href="/social">
     <i class="fa-solid fa-user"></i>
     Social
   </a>
   <div class="vertical-line-small"></div>
-  <a href="https://getdeuterium.win/download">
+  <a href="/download">
     <i class="fa-solid fa-download"></i>
     Download
   </a>
   <div class="vertical-line-small"></div>
-  <a href="https://getdeuterium.win/docs">
+  <a href="/docs">
     <i class="fa-solid fa-file"></i>
     Documentation
   </a>
   <div class="vertical-line-small"></div>
-  <a href="https://getdeuterium.win/blog">
+  <a href="/blog">
     <i class="fa-solid fa-message"></i>
     Blog
   </a>
