--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="side side-right">
-                        <div class="window">
+                        <div class="mac-term">
                             <div class="titlebar">
                                 <div class="container left">
                                     <button class="maximize titlebar-btn"></button>
@@ -134,10 +134,43 @@ File successfully created.</div>
                     </div>
                 </div>
                 <div class="section section-2">
-                    <div class="main-content">
-                        <h1><b>What does Deuterium do?</b></h1>
-                        <h5>Deuterium makes it easier to use the terminal with shorter commands, especially in CMD.</h5>
-                    </div>
+                    <div class="main-text">
+                        <div class="side side-left">
+                            <div class="mac-term">
+                                <div class="titlebar">
+                                    <div class="container left">
+                                        <button class="maximize titlebar-btn"></button>
+                                        <button class="minimize titlebar-btn"></button>
+                                        <button class="close titlebar-btn"></button>
+                                    </div>
+                                    <div class="container middle"><span>Terminal</span></div>
+                                    <div class="container right"></div>
+                                </div>
+                    
+                                <div class="main-content">
+                                    <span class="pre-content"><span class="green">deut@deuterium</span>:<span class="blue">~</span>$ dt lt c-project my-new-proj
+Loading project "c-project"
+\ (<span class="green">&checkmark;</span>) Loading Directories
+ \ (<span class="green">&checkmark;</span>) src
+ | (<span class="green">&checkmark;</span>) data
+\ (<span class="green">&checkmark;</span>) Loading Files
+ \ (<span class="green">&checkmark;</span>) Makefile
+ | (<span class="blue">…</span>) README.md
+ | ( ) .gitignore
+<span class="green">deut@deuterium</span>:<span class="blue">~</span>$ cd my-new-proj
+</div>
+                                </div>
+                            </div>
+                            <div class="side side-right">
+                                <h1><b>Quickly make projects</b></h1>
+                                <h3><b>With templates and short commands, you can make your projects in no time.</b></h3>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                            </div>
+                        </div>
                     
                 </div>
 
