--- a/index.html
+++ b/index.html
@@ -112,22 +112,21 @@
                         </div>
                     </div>
                     <div class="side side-right">
-                        <div class="mac-term">
+                        <div class="cmd-term">
                             <div class="titlebar">
-                                <div class="container left">
-                                    <button class="maximize titlebar-btn"></button>
-                                    <button class="minimize titlebar-btn"></button>
-                                    <button class="close titlebar-btn"></button>
+                                <div class="left">
+                                    <img src="https://ih1.redbubble.net/image.439808265.0172/flat,800x800,075,f.u3.jpg" alt="">
+                                    <span>Command Prompt</span>
                                 </div>
-                                <div class="container middle"><span>Terminal</span></div>
-                                <div class="container right"></div>
                             </div>
                 
                             <div class="main-content">
-                                <span class="pre-content"><span class="green">deut@deuterium</span>:<span class="blue">~</span>$ dt nd my-new-project
+                                <span class="pre-content">C:\Users\deuterium> dt nd my-new-project
 Directory successfully created.
-<span class="green">deut@deuterium</span>:<span class="blue">~</span>$ cd my-new-project
-<span class="green">deut@deuterium</span>:<span class="blue">~</span>$ dt nf main.c
+
+C:\Users\deuterium> cd my-new-project
+
+C:\Users\deuterium\my-new-project> dt nf main.c
 File successfully created.</div>
                             </div>
                         </div>
